<resources>
    <string name="app_name">metradar</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_about">About</string>
    <string name="title_activity_radar">metradar</string>
    <string name="large_about">About</string>
    <string name="about_title">An app which provides the latest weather radar for switzerland.</string>
    <string name="about_text">"This app fetches the radar images from metradar.ch! All credits goes to metradar. Thanks for providing such a great service. You can support metradar.ch by buying one of their products."</string>
    <string name="placeholder">[PLACEHOLDER]</string>
    <string name="link_netdata">app by netdata.ch</string>
    <string name="small_flash">Blitze</string>
    <string name="small_moderate">Mässig</string>
    <string name="small_light">Leicht</string>
    <string name="small_heavy">Stark</string>
    <string name="small_extreme">Extrem</string>
    <string name="dialog_refresh">Refreshing data. Please wait&#8230;</string>
    <string name="no_internet_connection">Your internet connection may be down! Please make sure you have a 3G or wifi connection.</string>
    <string name="connection_error">Whoops! Something went wrong. Please try again later.</string>
    <string name="maps_button">maps_button</string>
    <string name="small_snow">Schnee</string>
</resources>